# surgeist-generator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
plans/: crate-baseline-review.md
plans/cycles/: 2026-07-15-surgeist-generator-c01-shared-corpus-drivers.md  2026-07-17-surgeist-generator-review-remediation-c01-rooted-core-production-recovery.md  2026-07-17-surgeist-generator-review-remediation-c02-protected-source-css-vertical-slice.md  2026-07-17-surgeist-generator-review-remediation-c03-browser-free-layout-corpus-interface.md  2026-07-17-surgeist-generator-review-remediation-c04-atomic-layout-generation-leaf-candidate.md  P01-I01-S01-C01-rooted-core-production-recovery.md  P01-I01-S01-C02-protected-source-css-vertical-slice.md  P01-I01-S01-C03-browser-free-layout-corpus-interface.md  P01-I01-S01-C04-atomic-layout-generation-leaf-candidate.md  surgeist-generator-review-remediation-c01-rooted-core-production-recovery.md  surgeist-generator-review-remediation-c02-protected-source-css-vertical-slice.md  surgeist-generator-review-remediation-c03-browser-free-layout-corpus-interface.md  surgeist-generator-review-remediation-c04-atomic-layout-generation-leaf-candidate.md
plans/evidence/: 2026-07-16-c01-t02.md  2026-07-16-c01-t03.md
plans/sequences/: 2026-07-16-surgeist-generator-shared-corpus-drivers.md  2026-07-17-surgeist-generator-review-remediation.md  P01-I01-S01-review-remediation-delivery.md  surgeist-generator-review-remediation.md
plans/specs/: 2026-07-15-surgeist-generator-focused-verification.md  2026-07-15-surgeist-generator-shared-corpus-drivers.md  2026-07-17-surgeist-generator-review-remediation.md  P01-I01-review-remediation.md
src/: error.rs  lib.rs
src/core/: artifact.rs  case.rs  coordination.rs  corpus.rs  fs.rs  hash.rs  inventory.rs  lease.rs  manifest.rs  mod.rs  protection.rs  report.rs  source.rs  transaction.rs
src/css/: case.rs  check.rs  cli.rs  expectation.rs  filter.rs  fixture.rs  full_generation.rs  historical.rs  importer.rs  manifest.rs  mod.rs  report.rs  sidecar.rs  tests.rs
src/layout/: browser.rs  case.rs  checker.rs  checker_tests.rs  cli.rs  generation.rs  importer.rs  legacy_generator.rs  manifest.rs  measurement.rs  mod.rs  profile.rs  profile_tests.rs  report.rs  selection.rs  sidecar.rs  supervisor.rs  tests.rs  xml.rs
tests/: css_cli.rs  layout_cli.rs  layout_manifest.rs  package_policy.rs  public_api.rs  shared_contracts.rs
