[package]
name = "surgeist-generator"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/bj-data-eng/surgeist-generator"
readme = "README.md"
description = "Generator tooling and generation contracts for Surgeist."

[lib]
name = "surgeist_generator"
path = "src/lib.rs"
