[package]
name = "surgeist-generator"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/bj-data-eng/surgeist-generator"
readme = "README.md"
description = "Generator tooling and generation contracts for Surgeist."

[lib]
name = "surgeist_generator"
path = "src/lib.rs"

[[bin]]
name = "surgeist-css-generate"
path = "src/bin/surgeist-css-generate.rs"
required-features = ["css-corpus"]

[features]
default = []
layout-browser = []
css-corpus = []

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
toml = "=0.9.8"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
rustix = { version = "=1.1.4", features = ["fs", "process"] }
