[package]
name = "surgeist-generator"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT"
repository = "https://github.com/bj-data-eng/surgeist-generator"
readme = "README.md"
description = "Generator tooling and generation contracts for Surgeist."

[lib]
name = "surgeist_generator"
path = "src/lib.rs"

[[bin]]
name = "surgeist-css-generate"
path = "src/bin/surgeist-css-generate.rs"
required-features = ["css-corpus"]

[[bin]]
name = "surgeist-layout-generate"
path = "src/bin/surgeist-layout-generate.rs"
required-features = ["layout-browser"]

[features]
default = []
layout-browser = ["dep:chromiumoxide", "dep:futures", "dep:tokio", "dep:url"]
css-corpus = []

[dependencies]
chromiumoxide = { version = "=0.9.1", default-features = false, features = ["bytes"], optional = true }
futures = { version = "=0.3.31", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
tokio = { version = "=1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"], optional = true }
toml = "=0.9.8"
url = { version = "=2.5.7", optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
rustix = { version = "=1.1.4", features = ["fs", "process"] }
